hüfte + impressum navi

--- a/huefte/index.html
+++ b/huefte/index.html
@@ -55,13 +55,13 @@
 <body>
     <header class="site-header">
         <div class="header-inner">
-            <a href="index.html" class="logo"><span>Joint</span><span class="logo-highlight">Alignment</span><span>Compendium</span></a>
-            <nav class="nav-links"><a href="index.html">Home</a><a href="huefte.html" class="active">Hüfte</a><a href="ueber.html">Über</a></nav>
+            <a href="../index.html" class="logo"><span>Joint</span><span class="logo-highlight">Alignment</span><span>Compendium</span></a>
+            <nav class="nav-links"><a href="../index.html">Home</a><a href="index.html" class="active">Hüfte</a><a href="../ueber/index.html">Über</a></nav>
         </div>
     </header>
 
     <div class="overview-container">
-        <a href="index.html" class="back-link">← Zurück zur Hauptseite</a>
+        <a href="../index.html" class="back-link">← Zurück zur Hauptseite</a>
 
         <div class="overview-header">
             <h1>🦴 Hüfte</h1>
@@ -76,10 +76,10 @@
                 </div>
                 <p class="category-description">Spinopelvine Anatomie, biomechanische Grundlagen und Messparameter</p>
                 <div class="category-articles">
-                    <a href="allgemeineinfos.html" class="article-link"><span class="article-name">Allgemeine Informationen</span><span class="article-arrow">→</span></a>
-                    <a href="funktionellesafezoneundkinematischesalignment.html" class="article-link"><span class="article-name">Funktionelle Safe Zone & Kinematisches Alignment</span><span class="article-arrow">→</span></a>
-                    <a href="altersabhaengigeveraenderungen.html" class="article-link"><span class="article-name">Altersabhängige Veränderungen</span><span class="article-arrow">→</span></a>
-                    <a href="enthnischeunterschiede.html" class="article-link"><span class="article-name">Ethnische Unterschiede</span><span class="article-arrow">→</span></a>
+                    <a href="../allgemeineinfos/index.html" class="article-link"><span class="article-name">Allgemeine Informationen</span><span class="article-arrow">→</span></a>
+                    <a href="../funktionellesafezoneundkinematischesalignment/index.html" class="article-link"><span class="article-name">Funktionelle Safe Zone & Kinematisches Alignment</span><span class="article-arrow">→</span></a>
+                    <a href="../altersabhaengigeveraenderungen/index.html" class="article-link"><span class="article-name">Altersabhängige Veränderungen</span><span class="article-arrow">→</span></a>
+                    <a href="../enthnischeunterschiede/index.html" class="article-link"><span class="article-name">Ethnische Unterschiede</span><span class="article-arrow">→</span></a>
                 </div>
             </div>
 
@@ -90,9 +90,9 @@
                 </div>
                 <p class="category-description">Bildgebung, Klassifikation und radiologische Evaluation</p>
                 <div class="category-articles">
-                    <a href="klassifikation.html" class="article-link"><span class="article-name">Klassifikationssysteme</span><span class="article-arrow">→</span></a>
-                    <a href="radiologischemessungendirektewinkel.html" class="article-link"><span class="article-name">Radiologische Messungen - Direkte Winkel</span><span class="article-arrow">→</span></a>
-                    <a href="radiologischemessungenindikretewinkel.html" class="article-link"><span class="article-name">Radiologische Messungen - Indirekte Winkel</span><span class="article-arrow">→</span></a>
+                    <a href="../klassifikation/index.html" class="article-link"><span class="article-name">Klassifikationssysteme</span><span class="article-arrow">→</span></a>
+                    <a href="../radiologischemessungendirektewinkel/index.html" class="article-link"><span class="article-name">Radiologische Messungen - Direkte Winkel</span><span class="article-arrow">→</span></a>
+                    <a href="../radiologischemessungenindikretewinkel/index.html" class="article-link"><span class="article-name">Radiologische Messungen - Indirekte Winkel</span><span class="article-arrow">→</span></a>
                 </div>
             </div>
 
@@ -103,14 +103,14 @@
                 </div>
                 <p class="category-description">Operative Strategien, Positionierung und perioperatives Management</p>
                 <div class="category-articles">
-                    <a href="implantatpositionierung.html" class="article-link"><span class="article-name">Implantatpositionierung</span><span class="article-arrow">→</span></a>
-                    <a href="weichteilmanagement.html" class="article-link"><span class="article-name">Weichteilmanagement</span><span class="article-arrow">→</span></a>
-                    <a href="zugangswege.html" class="article-link"><span class="article-name">Zugangswege im Vergleich</span><span class="article-arrow">→</span></a>
-                    <a href="instabilitaetundluxation.html" class="article-link"><span class="article-name">Instabilität und Luxationen</span><span class="article-arrow">→</span></a>
-                    <a href="kniealskompensator.html" class="article-link"><span class="article-name">Knie als Kompensator</span><span class="article-arrow">→</span></a>
-                    <a href="muskuläresbalancingundabduktorenfunktion.html" class="article-link"><span class="article-name">Muskuläres Balancing & Abduktorenfunktion</span><span class="article-arrow">→</span></a>
-                    <a href="postoperativekomplikationen.html" class="article-link"><span class="article-name">Postoperative Komplikationen</span><span class="article-arrow">→</span></a>
-                    <a href="traumaundinfektionen.html" class="article-link"><span class="article-name">Trauma und Infektionen</span><span class="article-arrow">→</span></a>
+                    <a href="../implantatpositionierung/index.html" class="article-link"><span class="article-name">Implantatpositionierung</span><span class="article-arrow">→</span></a>
+                    <a href="../weichteilmanagement/index.html" class="article-link"><span class="article-name">Weichteilmanagement</span><span class="article-arrow">→</span></a>
+                    <a href="../zugangswege/index.html" class="article-link"><span class="article-name">Zugangswege im Vergleich</span><span class="article-arrow">→</span></a>
+                    <a href="../instabilitaetundluxation/index.html" class="article-link"><span class="article-name">Instabilität und Luxationen</span><span class="article-arrow">→</span></a>
+                    <a href="../kniealskompensator/index.html" class="article-link"><span class="article-name">Knie als Kompensator</span><span class="article-arrow">→</span></a>
+                    <a href="../muskuläresbalancingundabduktorenfunktion/index.html" class="article-link"><span class="article-name">Muskuläres Balancing & Abduktorenfunktion</span><span class="article-arrow">→</span></a>
+                    <a href="../postoperativekomplikationen/index.html" class="article-link"><span class="article-name">Postoperative Komplikationen</span><span class="article-arrow">→</span></a>
+                    <a href="../traumaundinfektionen/index.html" class="article-link"><span class="article-name">Trauma und Infektionen</span><span class="article-arrow">→</span></a>
                 </div>
             </div>
 
@@ -121,12 +121,12 @@
                 </div>
                 <p class="category-description">Roboter-assistierte Systeme und Navigationstechnologie</p>
                 <div class="category-articles">
-                    <a href="robotikallgemein.html" class="article-link"><span class="article-name">Robotik Allgemein</span><span class="article-arrow">→</span></a>
-                    <a href="cori.html" class="article-link"><span class="article-name">CORI System</span><span class="article-arrow">→</span></a>
-                    <a href="mako.html" class="article-link"><span class="article-name">MAKO System</span><span class="article-arrow">→</span></a>
-                    <a href="rosa.html" class="article-link"><span class="article-name">ROSA Hip System</span><span class="article-arrow">→</span></a>
-                    <a href="velys.html" class="article-link"><span class="article-name">Velys System</span><span class="article-arrow">→</span></a>
-                    <a href="intraoperativestrategienundnavigation.html" class="article-link"><span class="article-name">Intraoperative Strategien & Navigation</span><span class="article-arrow">→</span></a>
+                    <a href="../robotikallgemein/index.html" class="article-link"><span class="article-name">Robotik Allgemein</span><span class="article-arrow">→</span></a>
+                    <a href="../cori/index.html" class="article-link"><span class="article-name">CORI System</span><span class="article-arrow">→</span></a>
+                    <a href="../mako/index.html" class="article-link"><span class="article-name">MAKO System</span><span class="article-arrow">→</span></a>
+                    <a href="../rosa/index.html" class="article-link"><span class="article-name">ROSA Hip System</span><span class="article-arrow">→</span></a>
+                    <a href="../velys/index.html" class="article-link"><span class="article-name">Velys System</span><span class="article-arrow">→</span></a>
+                    <a href="../intraoperativestrategienundnavigation/index.html" class="article-link"><span class="article-name">Intraoperative Strategien & Navigation</span><span class="article-arrow">→</span></a>
                 </div>
             </div>
 
@@ -137,13 +137,13 @@
                 </div>
                 <p class="category-description">Komplexe Patientengruppen und spezielle Indikationen</p>
                 <div class="category-articles">
-                    <a href="adipositas.html" class="article-link"><span class="article-name">Adipositas</span><span class="article-arrow">→</span></a>
-                    <a href="rheuma.html" class="article-link"><span class="article-name">Rheumatologische Patienten</span><span class="article-arrow">→</span></a>
-                    <a href="lwsfusion.html" class="article-link"><span class="article-name">LWS-Fusion</span><span class="article-arrow">→</span></a>
-                    <a href="geriatrischepatient.html" class="article-link"><span class="article-name">Geriatrischer Patient</span><span class="article-arrow">→</span></a>
-                    <a href="hueftdysplasie.html" class="article-link"><span class="article-name">Hüftdysplasie</span><span class="article-arrow">→</span></a>
-                    <a href="revisionen.html" class="article-link"><span class="article-name">Revisionen</span><span class="article-arrow">→</span></a>
-                    <a href="beinlaengendifferenz.html" class="article-link"><span class="article-name">Beinlängendifferenz</span><span class="article-arrow">→</span></a>
+                    <a href="../adipositas/index.html" class="article-link"><span class="article-name">Adipositas</span><span class="article-arrow">→</span></a>
+                    <a href="../rheuma/index.html" class="article-link"><span class="article-name">Rheumatologische Patienten</span><span class="article-arrow">→</span></a>
+                    <a href="../lwsfusion/index.html" class="article-link"><span class="article-name">LWS-Fusion</span><span class="article-arrow">→</span></a>
+                    <a href="../geriatrischepatient/index.html" class="article-link"><span class="article-name">Geriatrischer Patient</span><span class="article-arrow">→</span></a>
+                    <a href="../hueftdysplasie/index.html" class="article-link"><span class="article-name">Hüftdysplasie</span><span class="article-arrow">→</span></a>
+                    <a href="../revisionen/index.html" class="article-link"><span class="article-name">Revisionen</span><span class="article-arrow">→</span></a>
+                    <a href="../beinlaengendifferenz/index.html" class="article-link"><span class="article-name">Beinlängendifferenz</span><span class="article-arrow">→</span></a>
                 </div>
             </div>
 
@@ -154,10 +154,10 @@
                 </div>
                 <p class="category-description">Implantatauswahl, Design und Dual Mobility Systeme</p>
                 <div class="category-articles">
-                    <a href="dualmobilityeins.html" class="article-link"><span class="article-name">Dual Mobility - Teil 1</span><span class="article-arrow">→</span></a>
-                    <a href="dualmobilityzewi.html" class="article-link"><span class="article-name">Dual Mobility - Teil 2</span><span class="article-arrow">→</span></a>
-                    <a href="dualmobilitydrei.html" class="article-link"><span class="article-name">Dual Mobility - Teil 3</span><span class="article-arrow">→</span></a>
-                    <a href="femurschaft.html" class="article-link"><span class="article-name">Femurschaft-Optionen</span><span class="article-arrow">→</span></a>
+                    <a href="../dualmobilityeins/index.html" class="article-link"><span class="article-name">Dual Mobility - Teil 1</span><span class="article-arrow">→</span></a>
+                    <a href="../dualmobilityzewi/index.html" class="article-link"><span class="article-name">Dual Mobility - Teil 2</span><span class="article-arrow">→</span></a>
+                    <a href="../dualmobilitydrei/index.html" class="article-link"><span class="article-name">Dual Mobility - Teil 3</span><span class="article-arrow">→</span></a>
+                    <a href="../femurschaft/index.html" class="article-link"><span class="article-name">Femurschaft-Optionen</span><span class="article-arrow">→</span></a>
                 </div>
             </div>
         </div>
@@ -172,11 +172,11 @@
                 </div>
                 <div class="footer-links">
                     <h4>Navigation</h4>
-                    <ul><li><a href="index.html">Home</a></li><li><a href="huefte.html">Hüfte</a></li><li><a href="ueber.html">Über den Autor</a></li></ul>
+                    <ul><li><a href="../index.html">Home</a></li><li><a href="../huefte/index.html">Hüfte</a></li><li><a href="../ueber/index.html">Über den Autor</a></li></ul>
                 </div>
                 <div class="footer-links">
                     <h4>Rechtliches</h4>
-                    <ul><li><a href="impressum.html">Impressum</a></li><li><a href="datenschutz.html">Datenschutz</a></li><li><a href="disclaimer.html">Disclaimer</a></li></ul>
+                    <ul><li><a href="../impressum/index.html">Impressum</a></li><li><a href="../datenschutz/index.html">Datenschutz</a></li><li><a href="../disclaimer/index.html">Disclaimer</a></li></ul>
                 </div>
             </div>
             <div class="footer-bottom">
