--- a/impressum/index.html
+++ b/impressum/index.html
@@ -43,11 +43,11 @@
 <body>
     <header class="site-header">
         <div class="header-inner">
-            <a href="index.html" class="logo"><span>Joint</span><span class="logo-highlight">Alignment</span><span>Compendium</span></a>
-            <nav class="nav-links"><a href="index.html">Home</a><a href="huefte.html">Hüfte</a><a href="ueber.html">Über</a></nav>
+            <a href="../index.html" class="logo"><span>Joint</span><span class="logo-highlight">Alignment</span><span>Compendium</span></a>
+            <nav class="nav-links"><a href="../index.html">Home</a><a href="../huefte/index.html">Hüfte</a><a href="../ueber/index.html">Über</a></nav>
         </div>
     </header>
-    <nav class="breadcrumb"><div class="breadcrumb-inner"><a href="index.html">Home</a><span class="breadcrumb-separator">›</span><span>Impressum</span></div></nav>
+    <nav class="breadcrumb"><div class="breadcrumb-inner"><a href="../index.html">Home</a><span class="breadcrumb-separator">›</span><span>Impressum</span></div></nav>
     <section class="page-header"><div class="page-header-content"><h1>Impressum</h1></div></section>
     <div class="main-container">
         <div class="content-card">
@@ -108,17 +108,17 @@
                 <div class="footer-links">
                     <h4>Navigation</h4>
                     <ul>
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="huefte.html">Hüfte</a></li>
-                        <li><a href="ueber.html">Über den Autor</a></li>
+                        <li><a href="../index.html">Home</a></li>
+                        <li><a href="../huefte/index.html">Hüfte</a></li>
+                        <li><a href="../ueber/index.html">Über den Autor</a></li>
                     </ul>
                 </div>
                 <div class="footer-links">
                     <h4>Rechtliches</h4>
                     <ul>
-                        <li><a href="impressum.html">Impressum</a></li>
-                        <li><a href="datenschutz.html">Datenschutz</a></li>
-                        <li><a href="disclaimer.html">Disclaimer</a></li>
+                        <li><a href="../impressum/index.html">Impressum</a></li>
+                        <li><a href="../datenschutz/index.html">Datenschutz</a></li>
+                        <li><a href="../disclaimer/index.html">Disclaimer</a></li>
                     </ul>
                 </div>
             </div>
